FIPS-9443/FIPS-9465 :: Remove Guava
Change-Id: I2ea0f363b605ceea3a7342b9de2de168e507ba50